@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: VT100Screen.m,v 1.233 2006-03-17 19:02:29 ujwal Exp $
+// $Id: VT100Screen.m,v 1.234 2006-03-23 09:38:00 ujwal Exp $
 //
 /*
  **  VT100Screen.m
@@ -255,11 +255,13 @@ static screen_char_t *incrementLinePointer(screen_char_t *buf_start, screen_char
 
 - (void) acquireLock
 {
+	//NSLog(@"%s", __PRETTY_FUNCTION__);
 	[screenLock lock];
 }
 
 - (void) releaseLock
 {
+	//NSLog(@"%s", __PRETTY_FUNCTION__);
 	[screenLock unlock];
 }
 
@@ -454,10 +456,11 @@ static screen_char_t *incrementLinePointer(screen_char_t *buf_start, screen_char
 		free(dirty);
 	dirty=(char*)malloc(height*width*sizeof(char));
 	memset(dirty, 1, width*height*sizeof(char));
-	[display setForceUpdate: YES];	
 	
 	// release lock
 	[self releaseLock];
+	
+	[display setForceUpdate: YES];	
 	
 }
 
