@@ -1,3 +1,7 @@
+2006-03-23	ujwal
+
+	* Made window metallized to get full Safari tab effect.
+
 2006-03-20	ujwal
 
 	* Initial checkin of new tabs provided by PSMTabBarControl. Not complete
